# language-learning

./: .env  .gitignore  package.json  server.js  vtt_affine.py
analysis_server/: app.py  common.py  main.py  main_test.py  pyproject.toml  routes.py  testing.py
analysis_server/data/: de_freq_1_15000.csv  william_de_test.csv  william_fr_test.csv
analysis_server/ingestion/: count_words.py
analysis_server/placement_quiz/: create_placement_quiz.py  create_placement_quiz_answer.py  create_placement_quiz_answer_test.py  create_placement_quiz_test.py  dictionaries.py  get_sampled_word.py  get_sampled_word_test.py  update_placement_quiz_answer.py  update_placement_quiz_answer_test.py  vocab_model_crud.py  vocab_models.py
analysis_server/vocab/: onboarding_quiz.py  quiz_sampler.py  quiz_sampler_test.py  vocab_list.py  vocab_list_test.py
analysis_server/word_lists/: fr_freq_1_50000.csv
backend/: pyproject.toml  readme.md
backend/data/: nisha_fr_test.csv
backend/src/app/: app.py  main.py
backend/src/db/: connection.py  media_vocab_list.py
backend/src/lib/: common.py  dictionaries.py  dictionaries_test.py  dotenv.py  estimate_words_remaining.py  testing.py
backend/src/media_processing/: document.py  document_test.py  lemmatize.py  lemmatize_test.py  process_doc.py  transcribe.py  transcribe_test.py
backend/src/routes/: all_routes.py
backend/src/routes/placement_quiz/: create_placement_quiz.py  create_placement_quiz_answer.py  create_placement_quiz_answer_test.py  create_placement_quiz_test.py  dictionaries.py  get_sampled_word.py  get_sampled_word_test.py  (+1 more)
(+82 files in other folders)
