[project]
name = "analysis-server"
version = "0.1.0"
description = ""
authors = [
    {name = "William Henning",email = "wchenningwchenning@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlmodel (>=0.0.24,<0.0.25)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
